--- a/config/config.toml.example
+++ b/config/config.toml.example
@@ -1,7 +1,7 @@
 # TiDB Configuration.
 
 # TiDB server host.
-host = "0.0.0.0"
+host = "127.0.0.1"
 
 # tidb server advertise IP.
 advertise-address = ""
@@ -10,10 +10,10 @@ advertise-address = ""
 port = 4000
 
 # Registered store name, [tikv, mocktikv, unistore]
-store = "unistore"
+store = "tikv"
 
 # TiDB storage path.
-path = "/tmp/tidb"
+path = "127.0.0.1:2379"
 
 # The socket file to use for connection.
 socket = "/tmp/tidb-{Port}.sock"
@@ -43,6 +43,10 @@ oom-use-tmp-storage = true
 # If the `tmp-storage-quota` exceeds the capacity of the temporary storage directory, tidb-server would return an error and exit.
 # The default value of tmp-storage-quota is under 0 which means tidb-server wouldn't check the capacity.
 tmp-storage-quota = -1
+
+# Specifies what operation TiDB performs when a single SQL statement exceeds the memory quota specified by the memory quota and cannot be spilled over to disk.
+# Valid options: ["log", "cancel"]
+oom-action = "log"
 
 # Make "kill query" behavior compatible with MySQL. It's not recommend to
 # turn on this option when TiDB server is behind a proxy.
@@ -142,7 +146,7 @@ expensive-threshold = 10000
 # File logging.
 [log.file]
 # Log file name.
-filename = ""
+filename = "/home/genius/.tiup/data/T5QwfWY/tidb-0/tidb.log"
 
 # Max log file size in MB (upper limit to 4096MB).
 max-size = 300
